--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    body{
-      margin: 0;
-      padding: 0;
+    h2{
+      margin: 0.5rem;
+    }
+    h3{
+      margin: 1px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+    p{
+      margin-top: 5px;
+    }
+    .container>div h1{
+      align-self: start;
+      margin-bottom: 1px;
     }
     .container>div{
       /* text-align: center; */
@@ -15,12 +26,140 @@
       flex-direction: column;
       align-items: center;
     }
-    .container>div h1{
-      align-self: start;
-    }
     img{
       width: 200px;
       height: 100%;
+    }
+
+    @media (min-width:576px){
+      .container{
+        
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+      }
+      .container>div h1{
+        align-self: center;
+        margin-bottom: 1px;
+      }
+      .web{
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+      }
+      .web img{
+        width: calc( 200px + 8% );
+        height: 108%;
+      }
+      #html-line{
+        width: 28%;
+        transform: rotate(18deg);
+        position: absolute;
+        top: 35%;
+        left: 15%;
+        /* transition: 3s; */
+      }
+      .html{
+        position: absolute;
+        top: 10%;
+        left: 5%;
+        /* transform: translate(-50%,-50%); */
+      }
+      .css3{
+        position: absolute;
+        top: 2%;
+        left: 30%;
+        /* transform: translate(-50%,-50%); */
+      }
+      #css3-line{
+        width: 8%;
+        transform: rotate(45deg);
+        position: absolute;
+        top: 33%;
+        left: 38%;
+        /* transition: 3s; */
+      }
+      .javascript{
+        position: absolute;
+        top: 50%;
+        left: 10%;
+        /* transform: translate(-50%,-50%); */
+      }
+      #javascript-line{
+        width: 20%;
+        transform: rotate(-10deg);
+        position: absolute;
+        top: 55%;
+        left: 22%;
+        /* transition: 3s; */
+      }
+      .jquery{
+        position: absolute;
+        top: 65%;
+        left: 25%;
+        /* transform: translate(-50%,-50%); */
+      }
+      #jquery-line{
+        width: 7%;
+        transform: rotate(-30deg);
+        position: absolute;
+        top: 65%;
+        left: 35%;
+        /* transition: 3s; */
+      }
+      .bootstrap{
+        position: absolute;
+        top: 5%;
+        right: 26%;
+        /* transform: translate(-50%,-50%); */
+      }
+      #bootstrap-line{
+        width: 10%;
+        transform: rotate(145deg);
+        position: absolute;
+        top: 30%;
+        right: 36%;
+        /* transition: 3s; */
+      }
+      .sass{
+        position: absolute;
+        top: 20%;
+        right: 3%;
+        /* transform: translate(-50%,-50%); */
+      }
+      #sass-line{
+        width: 28%;
+        transform: rotate(170deg);
+        position: absolute;
+        top: 38%;
+        right: 15%;
+        /* transition: 3s; */
+      }
+      .vue{
+        position: absolute;
+        top: 60%;
+        right: 10%;
+        /* transform: translate(-50%,-50%); */
+      }
+      #vue-line{
+        width: 20%;
+        transform: rotate(-165deg);
+        position: absolute;
+        top: 60%;
+        right: 22%;
+        /* transition: 3s; */
+      }
+      .container p{
+        display: none;
+      }
+      #web-text{
+        display: block;
+      }
+      /* hr{
+        display: none;
+      } */
     }
   </style>
 </head>
@@ -29,47 +168,61 @@
     <div class="web">
       <img src="./images/wda.png">
       <h2>泰山職訓局</h2>
-      <h2>從零開始的網頁設計課程</h2>
-      <p>轉職網頁開發人員   掌握就業必備職能<br>
+      <h3>從零開始的網頁設計課程</h3>
+      <p id="web-text">轉職網頁開發人員   掌握就業必備職能<br>
         由淺入深學習技術   強化職場的競爭力</p>
       </div>
-      <hr>
+
+      <hr id="html-line">
+
       <div class="html">
       <img src="./images/html.png">
       <h1>Html</h1>
       <p>超文本標記語言（英語：HyperText Markup Language，簡稱：HTML）是一種用於建立網頁的標準標記語言。 HTML 是一種基礎技術，常與 CSS、JavaScript 一起被眾多網站用於設計賞心悅目的網頁、網頁應用程式以及行 動應用程式的使用者介面。網頁瀏覽器可以讀取 HTML 檔案，並將其彩現成視覺化網頁。HTML 描述了一個網站 的結構語意隨著線索的呈現，使之成為一種標記語言而非程式語言。</p>
     </div>
-    <hr>
+
+    <hr id="css3-line">
+
     <div class="css3">
       <img src="./images/css.png">
       <h1>CSS3</h1>
       <p>層疊樣式表（英語：Cascading Style Sheets，簡寫CSS），又稱串樣式列表、級聯樣式表、串接樣式表、階層式樣 式表，一種用來為結構化文件（如 HTML 文件或 XML 應用）添加樣式（字型、間距和顏色等）的電腦語言，由 W3C 定義和維護。目前最新版本是 CSS2.1，為 W3C 的推薦標準。CSS3 現在已被大部分現代瀏覽器支援，而下 一版的 CSS4 仍在開發中。</p>
     </div>
-    <hr>
+
+    <hr id="javascript-line">
+
     <div class="javascript">
       <img src="./images/js.png">
       <h1>JavaScript</h1>
       <p>JavaScript，通常縮寫為 JS，是一種進階直譯語言的程式語言。JavaScript 是一門基於原型、函式先行的語言，是 一門多範式的語言，它支援物件導向編程，指令式程式設計，以及函式語言程式設計。</p>
     </div>
-    <hr>
+
+    <hr id="jquery-line">
+
     <div class="jquery">
       <img src="./images/jq.png">
       <h1>jQuery</h1>
       <p>jQuery 是一套跨瀏覽器的 JavaScript 函式庫，簡化 HTML 與 JavaScript 之間的操作。全球前 10,000 個存取最高的 網站中，有 65% 使用了jQuery，是目前最受歡迎的 JavaScript 函式庫。</p>
     </div>
-    <hr>
+
+    <hr id="bootstrap-line">
+
     <div class="bootstrap">
       <img src="./images/bs.png">
       <h1>Bootstrap</h1>
       <p>Bootstrap 是一組用於網站和網路應用程式開發的開源前端（所謂「前端」，指的是展現給終端使用者的介面。與 之對應的「後端」是在伺服器上面執行的程式碼）框架，包括 HTML、CSS及JavaScript 的框架，提供字體排印、 表單、按鈕、導航及其他各種元件及 Javascript 擴充套件，旨在使動態網頁和 Web 應用的開發更加容易。</p>
     </div>
-    <hr>
+
+    <hr id="sass-line">
+
     <div class="sass">
       <img src="./images/sass.png">
       <h1>Sass</h1>
       <p>Sass是一個最初由Hampton Catlin設計並由Natalie Weizenbaum開發的層疊樣式表語言。在開發最初版本之後，Weizenbaum和Chris Eppstein繼續通過SassScript來繼續擴充Sass的功能。SassScript是一個在Sass檔案中使用的小型手稿語言。</p>
     </div>
-    <hr>
+
+    <hr id="vue-line">
+
     <div class="vue">
       <img src="./images/vue.png">
       <h1>Vue.js</h1>
