--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         display: none;
       } */
     }
-    @keyframes VUE {
+    /* @keyframes VUE {
       from {
         top: 50%;
         right: 50%;
@@ -184,7 +184,7 @@
       to {
         width: 20%;
       }
-    }
+    } */
   </style>
 </head>
 <body>
